--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h3> About Myself </h3>
         
         <p>
-          I am 21 yearsold and studied at Kolehiyo ng Lungsod ng lipa as a CCS freshman student, I've come to understand that the world of bits and codes is not just a passion but it is a way of life. It's a world where innovation is the key, and challenges are the stepping stones to success. I strive to embody the essence of a smart, independent CCS student, ready to make a meaningful impact in the world of technology.
+          I'm Jeivi Veracruz, currently studying Computer Science at Kolehiyo ng Lungsod ng Lipa, where I am passionate about my learning in programming, technology, and developing my innovative problem-solving skills.
         </p>
         <br />
         
